--- a/HolySlimes.csproj
+++ b/HolySlimes.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Behaviors\DemonDrain.cs" />
     <Compile Include="Behaviors\SpiritHealOrDrainAura.cs" />
     <Compile Include="Behaviors\SpiritHealOrDrain.cs" />
+    <Compile Include="Commands\AbilityGiving.cs" />
     <Compile Include="Commands\SpiritRandom.cs" />
     <Compile Include="Commands\SpiritMode.cs" />
     <Compile Include="Creation\Gordo\Angel.cs" />
@@ -173,6 +174,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AssetBundles\Data\slimedata" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Images\PinksInBetweenIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
