--- a/HolySlimes.csproj
+++ b/HolySlimes.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Commands\AbilityGiving.cs" />
     <Compile Include="Commands\SpiritRandom.cs" />
     <Compile Include="Commands\SpiritMode.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="Creation\Gordo\Angel.cs" />
     <Compile Include="Creation\Gordo\Demon.cs" />
     <Compile Include="Creation\Gordo\Spirit.cs" />
@@ -177,6 +178,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Images\PinksInBetweenIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="AssetBundles\Zones\heavenzone" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
